<resources>
    <string name="app_name">Real Estate Manager</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="type">Type</string>
    <string name="price">Price</string>
    <string name="surface">Surface</string>
    <string name="add">Add</string>
    <string name="edit">Edit</string>
    <string name="address">Address</string>
    <string name="number_of_rooms">Number of rooms</string>
    <string name="points_of_interest">Points of interest</string>
    <string name="real_estate_agent">Real estate agent</string>
    <string name="description">Description</string>
    <string name="star">*</string>
    <string name="complete_fields">"Please complete all fields with an asterisk"</string>
    <string name="lorem_ipsum">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Morbi euismod tristique mauris,
        at tincidunt tellus ultricies a. Etiam at erat eget justo fringilla consectetur vel pulvinar quam. Maecenas facilisis,
        urna vitae porttitor interdum, metus turpis luctus orci, at mollis orci dolor a tellus. Integer ut justo quis dui mollis
        feugiat. Integer at interdum elit. Suspendisse a turpis leo.
    </string>
    <string name="type_hint">House, Duplex, …</string>
    <string name="price_hint">$500,000</string>
    <string name="address_hint">740 Park Avenue …</string>
    <string name="surface_hint">250 m²</string>
    <string name="rooms_hint">8</string>
    <string name="interest_hint">School, Supermarket, …</string>
    <string name="description_hint">Garden with swimming pool …</string>
    <string name="map_view">Map View</string>
    <string name="loan_calculator">Loan Calculator</string>
    <string name="conversions">Conversions</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="popup_title_permission_files_access">Please allow files access to select an image.</string>
    <string name="toast_title_no_image_chosen">No image chosen</string>
    <string name="select_picture">Select a picture</string>
    <string name="eur">EUR</string>
    <string name="usd">USD</string>
    <string name="monthly_payment">Your monthly payment will be</string>
    <string name="per_month">$/month</string>
    <string name="credit_cost">Credit cost :</string>
    <string name="dollar">$</string>
    <string name="years">years</string>
    <string name="percent">%</string>
    <string name="interest_rate">Interest rate</string>
    <string name="loan_duration">Loan duration</string>
    <string name="loan_amount">Loan amount</string>

</resources>
